--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,14 @@
   --mail-color: rgba(255, 255, 255, 0.6); /* цвет tel,mail*/
   --button-color: #188ce8; /*кнопка,цвет*/
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--top-line-color);
+  color: var(--dark-grey-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
 p,
 h1,
 h2,
@@ -19,6 +27,14 @@ h5,
 h6 {
   margin: 0;
 }
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+address {
+  font-style: normal;
+}
 ul {
   margin: 0;
   padding-left: 0;
@@ -26,13 +42,14 @@ ul {
 }
 button {
   cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  display: block;
 }
 .container {
   width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .html {
   box-sizing: border-box;
@@ -40,14 +57,12 @@ button {
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: var(--top-line-color);
-  color: var(--dark-grey-color);
-  font-size: 14px;
-  letter-spacing: 0.03em;
+.image-border {
+  border: 1px solid #eeeeee;
+  border-top: none;
+  padding: 20px 24px;
 }
 .visually-hidden {
   position: absolute;
@@ -64,6 +79,8 @@ body {
 
 .list {
   list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
 .link-decoration {
   text-decoration: none;
@@ -73,10 +90,9 @@ body {
   padding-bottom: 94px;
 }
 .title {
-  background-color: var(--top-line-color--);
   border-bottom: 1px solid #ececec;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .main-link {
   display: flex;
@@ -84,6 +100,7 @@ body {
 }
 .navigation {
   display: flex;
+  margin-left: 93px;
 }
 .navigation-header {
   font-weight: 500;
@@ -91,7 +108,6 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
   display: flex;
-  margin-left: 93px;
 }
 .navigation-item {
   display: block;
@@ -104,7 +120,7 @@ body {
 }
 .contact {
   display: flex;
-  margin-left: 359px;
+  margin-left: auto;
 }
 .contact .navigation-item + .navigation-item {
   margin-left: 50px;
@@ -177,7 +193,7 @@ body {
 }
 .button-list {
   display: flex;
-  margin-bottom: 56px;
+  margin-bottom: 50px;
   justify-content: center;
 }
 
@@ -193,17 +209,18 @@ body {
   background-color: var(--mud-white-color);
   padding: 6px 22px;
   display: block;
+  border: none;
+  border-radius: 4px;
+}
+.btn:not(:last-child) {
   margin-right: 8px;
 }
-
 .btn:hover,
 .btn:focus {
   color: var(--top-line-color);
   background-color: var(--blue-color);
 }
-.image-border {
-  border: 1px solid #eeeeee;
-}
+
 .slogan-name {
   font-weight: 900;
   font-size: 44px;
@@ -240,6 +257,8 @@ body {
   background: var(--blue-color);
   display: block;
   margin: 0 auto;
+  border: none;
+  padding: 10px 32px;
 }
 .button-order:hover,
 .button-order:focus {
@@ -266,21 +285,22 @@ body {
 .soft-skills-list {
   display: flex;
   margin-bottom: 0;
+  gap: 30px;
 }
-.item {
-  width: 270px;
-}
+
 .soft-skills-item {
   margin-bottom: 10px;
+}
+.adi {
+  padding-top: 0;
 }
 .image-job-title {
   text-align: center;
   margin-bottom: 50px;
-  margin-top: 94px;
 }
 .image-list {
   display: flex;
-  width: 370px;
+  gap: 30px;
 }
 
 .image-team {
@@ -289,9 +309,14 @@ body {
 }
 .image-team-list {
   display: flex;
-  width: 270px;
+  gap: 30px;
 }
-
+.image-staff {
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 .image-job-title,
 .image-team {
   font-weight: 700;
@@ -303,6 +328,10 @@ body {
 .image-background {
   background-color: var(--mud-white-color);
 }
+.staff {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .image-team-name {
   font-weight: 500;
   font-size: 16px;
@@ -312,7 +341,7 @@ body {
   color: var(--dark-grey-color);
   display: block;
   text-align: center;
-  margin-top: 30px;
+  padding-bottom: 10px;
 }
 
 .image-team-position {
@@ -323,21 +352,18 @@ body {
   color: var(--main-text-color);
   display: block;
   text-align: center;
-  margin-top: 10px;
 }
 .images {
   display: flex;
   flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
 .images-item {
   width: 370px;
-  margin-right: 30px;
 }
 .images-item:nth-last-child(-n + 3) {
   margin-bottom: 94px;
-}
-.images-item:nth-child(3n) {
-  margin-right: 0;
 }
 
 .image-name {
@@ -348,9 +374,7 @@ body {
   letter-spacing: 0.06em;
   color: var(--dark-grey-color);
   display: inline-block;
-  margin-top: 20px;
   margin-bottom: 0;
-  margin-left: 24px;
 }
 .image-name-discription {
   font-weight: 400;
@@ -361,8 +385,6 @@ body {
   color: var(--main-text-color);
   display: block;
   margin-top: 4px;
-  margin-bottom: 20px;
-  margin-left: 24px;
 }
 .site-footer {
   background: var(--grey-color);
@@ -428,6 +450,9 @@ body {
 .contact-phone:focus {
   color: var(--blue-color);
 }
-.contact-information {
+.address-link:not(:last-child) {
+  margin-bottom: 9px;
+}
+.address {
   margin-top: 20px;
 }
