--- a/css/styles.css
+++ b/css/styles.css
@@ -211,10 +211,9 @@ button {
   display: block;
   border: none;
   border-radius: 4px;
-}
-.btn:not(:last-child) {
   margin-right: 8px;
 }
+
 .btn:hover,
 .btn:focus {
   color: var(--top-line-color);
@@ -291,7 +290,7 @@ button {
 .soft-skills-item {
   margin-bottom: 10px;
 }
-.adi {
+.additional {
   padding-top: 0;
 }
 .image-job-title {
@@ -356,8 +355,7 @@ button {
 .images {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -30px;
-  margin-bottom: -30px;
+  gap: 30px;
 }
 .images-item {
   width: 370px;
