--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ button {
 .navigation-header {
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   display: flex;
 }
@@ -195,6 +195,7 @@ button {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
+  column-gap: 8px;
 }
 
 .btn {
@@ -211,7 +212,6 @@ button {
   display: block;
   border: none;
   border-radius: 4px;
-  margin-right: 8px;
 }
 
 .btn:hover,
@@ -340,7 +340,7 @@ button {
   color: var(--dark-grey-color);
   display: block;
   text-align: center;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .image-team-position {
@@ -360,10 +360,6 @@ button {
 .images-item {
   width: 370px;
 }
-.images-item:nth-last-child(-n + 3) {
-  margin-bottom: 94px;
-}
-
 .image-name {
   font-weight: 700;
   font-size: 18px;
@@ -371,7 +367,6 @@ button {
   /* identical to box height, or 200% */
   letter-spacing: 0.06em;
   color: var(--dark-grey-color);
-  display: inline-block;
   margin-bottom: 0;
 }
 .image-name-discription {
